# dvc-dat

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
dat/: cube.py  do.py  inst.py  io.py
docs/: about.md  index.md  overview.md
dvc_dat/: __init__.py  __main__.py  dat.py  dat_io.py  dat_tools.py  do_fn.py  dvc_dat_config.py  ml_dat_config.py
dvc_dat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/: .datconfig  .datconfig.json  cube_examples.ipynb  dat_examples.ipynb  dat_tools_examples.ipynb  do  do_examples.ipynb
examples/example_do_folder/: some_python_file.py  test.yaml
examples/example_do_folder/dat_tools_examples/: cube_hello.py  cube_hello_inst.py  mr_sprint23.py  rpt.py
examples/example_do_folder/df_tools_examples/: rpt.py
examples/example_do_folder/hello_mspipe/: hello_3stager.json  (+5 more)
examples/example_mounted_folder/: hello_mspipe.py  some_python_file.py  sprint25.py
examples/simple/: metrics.py  snap.py
ml-dat/: cube.py
ml_dat/: __init__.py  cube.py  dat_tools.py  df_tools.py  do.py  do_fn.py  inst.py  ml_dat_config.py
site/: 404.html  index.html
site/about/: index.html
site/overview/: index.html
site/search/: search_index.json
standard_do_scripts/: add.py  info.py  list.py  pull.py  push.py
tests/: .datconfig  .datconfig.json  do  test_cube.py  test_dat.py  test_dat_tools.py  test_df_tools.py  test_do.py  test_inst.py
tests/test_do_folder/: configurable_salutation.py  hello_again.py  hello_config.json  hello_shadowed_config.json  hello_world.py  letterator.py  my_letters.py  supported.yaml
(+100 files in other folders)
